RESOLVED FIXED310608
REGRESSION(309376@main): Crash in ResizeObserver::observeInternal
https://bugs.webkit.org/show_bug.cgi?id=310608
Summary REGRESSION(309376@main): Crash in ResizeObserver::observeInternal
Ryosuke Niwa
Reported 2026-03-23 23:06:32 PDT
e.g. #0 0x000300c2e3b8 in WTF::WeakPtr<WebCore::Element, WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>>::get() const+0x90 (WebCore:arm64e+0xc2e3b8) #1 0x00030b66ab54 in WebCore::ResizeObserver::observeInternal(WebCore::Element&, WebCore::ResizeObserverBoxOptions)+0x10d8 (WebCore:arm64e+0xb66ab54) #2 0x000303e69fb8 in WebCore::jsResizeObserverPrototypeFunction_observe(JSC::JSGlobalObject*, JSC::CallFrame*)+0x654 (WebCore:arm64e+0x3e69fb8) <rdar://173145739>
Attachments
Ryosuke Niwa
Comment 1 2026-03-23 23:10:08 PDT
EWS
Comment 2 2026-03-24 16:26:24 PDT
Committed 309875@main (ce5c27017196): <https://commits.webkit.org/309875@main> Reviewed commits have been landed. Closing PR #61224 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.