REGRESSION(309376@main): Crash in ResizeObserver::observeInternal https://bugs.webkit.org/show_bug.cgi?id=310608 rdar://173145739

Reviewed by Anne van Kesteren.

The bug was caused by ResizeObserver::observeInternal calling ResizeObserver::unobserve,
which removes the entry from ListHashSet and invalidates the ListHashSet iterator.
Fixed the crash by storing the value in a local variable and avoid accessing it via
the invalidated iterator.

Test: resize-observer/resize-observer-observe-twice.html

* LayoutTests/resize-observer/resize-observer-observe-twice-expected.txt: Added.
* LayoutTests/resize-observer/resize-observer-observe-twice.html: Added.
* Source/WebCore/page/ResizeObserver.cpp:
(WebCore::ResizeObserver::observeInternal):

Canonical link: https://commits.webkit.org/309875@main